# firmware-playground

./: .gitignore  LICENSE  README.md
e310x/: .gitignore  Cargo.toml  README.md  gdb_init  memory.x
e310x/.cargo/: config.toml
e310x/src/: lib.rs  virq.rs
stm32f1/: .gitignore  README.md
stm32f1/rust_without_hal/blinky_interrupt/: Cargo.toml
stm32f1/rust_without_hal/blinky_interrupt/src/: main.rs
stm32f4/: README.md
stm32f4/without_hal/: Cargo.toml
stm32f4/without_hal/stm32f4/src/stm32f410/: mod.rs
stm32l4/: README.md
stm32l4/old/adc/: Makefile  main.c
stm32l4/old/external_interrupt/: Makefile  main.c
stm32l4/old/modules/: clock.c  gpio.c  interrupts.c
stm32l4/old/stepper_motor/: .syntastic_c_config  Makefile  main.c
stm32l4/old/uart/: Makefile  main.c  uart.elf
stm32l4/onboard_peripherals/inc/: init.h
tm4c123/: README.md
