[package]
name = "e310x_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
# Provides startup code and useful attributes
# https://docs.rs/riscv-rt
riscv-rt = "0.11"

# Provides low-level access to registers and assembly instructions
# https://docs.rs/riscv
riscv = { version = "0.10", features = ["critical-section-single-hart"] }

# Efficient logging framework
# https://docs.rs/rtt-target
rtt-target = "0.4"

# Community built peripheral access crate (PAC)
# https://docs.rs/e310x/latest
e310x = { version = "0.11", features = ["critical-section", "g002"] }
# e310x = { path = "./crates/e310x", features = ["critical-section", "rt", "g002"] }

# Community built hardware abstraction layer (HAL)
# https://docs.rs/e310x-hal/latest/e310x_hal
e310x-hal = { path = "./crates/e310x-hal", features = ["g002"] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
